--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,8 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.13,<3.14"
 dependencies = [
-    "bleak (>=0.22.3,<0.23.0)"
+    "bleak (>=0.22.3,<0.23.0)",
+    "fastapi[standard] (>=0.115.8,<0.116.0)"
 ]
 
 
