--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,22 +1,10 @@
 [project]
 name = "ftms"
 version = "0.1.0"
-description = "Treadmill FTMS training"
-authors = [
-    {name = "Your Name",email = "you@example.com"}
-]
+description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.13,<3.14"
+requires-python = ">=3.13"
 dependencies = [
-    "bleak (>=0.22.3,<0.23.0)",
-    "fastapi[standard] (>=0.115.8,<0.116.0)"
+    "bleak>=0.22.3",
+    "fastapi[standard]>=0.115.8",
 ]
-
-
-[build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
-build-backend = "poetry.core.masonry.api"
-
-[tool.poetry.group.dev.dependencies]
-black = "^25.1.0"
-
