--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,22 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "black>=25.1.0",
     "bleak>=0.22.3",
     "fastapi[standard]>=0.115.8",
+    "flake8>=7.1.1",
+    "flake8-docstrings>=1.7.0",
+    "isort>=6.0.0",
+    "mypy>=1.15.0",
+    "poethepoet>=0.32.2",
 ]
+
+[tool.poe.tasks]
+_black = "black ."
+_isort = "isort ."
+_mypy = "mypy ."
+_flake8 = "flake8 ."
+
+# Compound tasks
+lint = ["_mypy", "_flake8"]
+autoformat = ["_black", "_isort"]
