--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ dependencies = [
     "isort>=6.0.0",
     "mypy>=1.15.0",
     "poethepoet>=0.32.2",
+    "textual-dev>=1.7.0",
+    "textual-serve>=1.1.1",
 ]
 
 [tool.poe.tasks]
